OpenLDAP 2.3 Change Log

OpenLDAP 2.3.33 Engineering
	Fixed slapd-ldap/meta privileged conn caching (ITS#4547)
	Fixed slapd-ldap chase-referrals switch (ITS#4557)
	Fixed slapd-ldap bind behavior when idassert is always used (ITS#4781)
	Fixed slapd-ldap response handling bugs (ITS#4782)
	Fixed slapd-ldap/meta privileged connections handling (ITS#4791)
	Fixed slapd-meta retrying (ITS#4594, 4762)
	Fixed slapo-chain referral DN use (ITS#4776)

OpenLDAP 2.3.32 Release (2007/01/04)
	Fixed slapd add redundant duplicate value check (ITS#4600)
	Fixed slapd ACL set memleak (ITS#4780)
	Fixed slapd syncrepl shutdown hang (ITS#4790)
	Fixed slapd connection_get race condition on Windows (ITS#4793)
	Fixed slapd values return filter control leak (ITS#4794)
	Fixed slapd-sql Debug typo (ITS#4784)
	Fixed slapo-rwm parameter handling (ITS#3971, 4458, 4638, 4689)
	Documentation
		Fixed reference to deprecated option in admin guide (ITS#4795)

OpenLDAP 2.3.31 Release (2006/12/17)
	Fixed libldap unchased referral leak (ITS#4545)
	Fixed libldap tls callback (ITS#4723)
	Fixed liblutil ldif file: URL parsing
	Fixed slapd syncrepl logging (ITS#4755)
	Fixed slapd group ACL caching when proxyAuthz'ing (ITS#4760)
	Fixed slapd "group" authz default member parsing (ITS#4761)
	Fixed slapd uninitialized sd_actives array (ITS#4765)
	Fixed slapd DN parsing in bindconf_parse (ITS#4766)
	Fixed slapd conditional in macro argument (ITS#4769)
	Fixed slapd send_search_reference should propagate errors
	Fixed slapd memleak on failed bind (ITS#4771)
	Fixed slapd schema preparation case to match RFCs (ITS#4764)
	Fixed slapd kbind buffer overflow condition (ITS#4775)
	Fixed slapd connections_shutdown assert
	Fixed slapd glue parent/sub db overlay nesting (ITS#4615)
	Fixed slapd-bdb/hdb/ldbm slap_add_opattrs error checking
	Fixed slapd-bdb/hdb setting up tool threads when no indices specified
	Fixed slapd-perl interpreter context (ITS#4751)
	Fixed slapo-syncprov to complain if defined outside of a database